force-app/main/default/objects/Star_Wars_Starship__c/Star_Wars_Starship__c.object-meta.xml
<CustomObject>
    <label>Star Wars: Starship</label>
    <nameField>
        <label>Starship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Star Wars: Starships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>