force-app/main/default/objects/Star_Wars_Starship__c/fields/Cargo_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Capacity__c</fullName>
    <label>Cargo Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>