force-app/main/default/objects/Star_Wars_Starship__c/fields/Consumables__c.field-meta.xml
<CustomField>
    <fullName>Consumables__c</fullName>
    <label>Consumables</label>
    <length>30</length>
    <type>Text</type>
</CustomField>