force-app/main/default/objects/Star_Wars_Starship__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <label>Crew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>