force-app/main/default/objects/Star_Wars_Starship__c/fields/Hyperdrive_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hyperdrive_Rating__c</fullName>
    <label>Hyperdrive Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>