force-app/main/default/objects/Star_Wars_Starship__c/fields/Max_Atmosphering_Speed__c.field-meta.xml
<CustomField>
    <fullName>Max_Atmosphering_Speed__c</fullName>
    <label>Max Atmosphering Speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>