force-app/main/default/objects/Star_Wars_Starship__c/fields/Passengers__c.field-meta.xml
<CustomField>
    <fullName>Passengers__c</fullName>
    <label>Passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>