force-app/main/default/objects/Star_Wars_Starship__c/fields/Pilots__c.field-meta.xml
<CustomField>
    <fullName>Pilots__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilots</label>
    <referenceTo>Star_Wars_Person__c</referenceTo>
    <relationshipLabel>Starships</relationshipLabel>
    <relationshipName>Star_Wars_Starships</relationshipName>
    <type>Lookup</type>
</CustomField>