force-app/main/default/objects/Star_Wars_Starship__c/fields/Starship_Class__c.field-meta.xml
<CustomField>
    <fullName>Starship_Class__c</fullName>
    <label>Starship Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>